--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@umijs/route-utils": "^1.0.36",
     "antd": "^4.9.4",
     "classnames": "^2.2.6",
+    "emoji-mart": "^3.0.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.11",
     "moment": "^2.25.3",
@@ -67,6 +68,7 @@
   "devDependencies": {
     "@ant-design/pro-cli": "^2.0.2",
     "@types/classnames": "^2.2.7",
+    "@types/emoji-mart": "^3.0.4",
     "@types/express": "^4.17.0",
     "@types/history": "^4.7.2",
     "@types/jest": "^26.0.0",
