--- a/package.json
+++ b/package.json
@@ -44,12 +44,13 @@
     "not ie <= 10"
   ],
   "dependencies": {
-    "@ant-design/icons": "^4.5.0",
-    "@ant-design/pro-descriptions": "^1.6.0",
-    "@ant-design/pro-form": "^1.16.0",
-    "@ant-design/pro-layout": "^6.14.2",
-    "@ant-design/pro-table": "^2.30.0",
-    "@umijs/route-utils": "^1.0.36",
+    "@ant-design/icons": "^4.6.2",
+    "@ant-design/pro-card": "^1.14.2",
+    "@ant-design/pro-descriptions": "^1.8.3",
+    "@ant-design/pro-form": "^1.29.1",
+    "@ant-design/pro-layout": "^6.19.7",
+    "@ant-design/pro-table": "^2.42.1",
+    "@umijs/route-utils": "^1.0.37",
     "antd": "^4.9.4",
     "antd-img-crop": "^3.14.1",
     "classnames": "^2.2.6",
@@ -67,24 +68,24 @@
     "umi-request": "^1.0.8"
   },
   "devDependencies": {
-    "@ant-design/pro-cli": "^2.0.2",
-    "@types/classnames": "^2.2.7",
+    "@ant-design/pro-cli": "^2.1.1",
+    "@types/classnames": "^2.3.1",
     "@types/emoji-mart": "^3.0.4",
-    "@types/express": "^4.17.0",
+    "@types/express": "^4.17.12",
     "@types/history": "^4.7.2",
-    "@types/jest": "^26.0.0",
+    "@types/jest": "^26.0.23",
     "@types/js-cookie": "^2.2.6",
-    "@types/lodash": "^4.14.168",
-    "@types/qs": "^6.5.3",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
-    "@types/react-helmet": "^6.1.0",
-    "@umijs/fabric": "^2.5.6",
+    "@types/lodash": "^4.14.170",
+    "@types/qs": "^6.9.6",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "@types/react-helmet": "^6.1.1",
+    "@umijs/fabric": "^2.6.2",
     "@umijs/plugin-blocks": "^2.0.5",
-    "@umijs/plugin-esbuild": "^1.0.1",
-    "@umijs/preset-ant-design-pro": "^1.2.0",
-    "@umijs/preset-dumi": "^1.1.4",
-    "@umijs/preset-react": "^1.7.13",
+    "@umijs/plugin-esbuild": "^1.3.1",
+    "@umijs/preset-ant-design-pro": "^1.3.2",
+    "@umijs/preset-dumi": "^1.1.20",
+    "@umijs/preset-react": "^1.8.12",
     "@umijs/yorkie": "^2.0.3",
     "carlo": "^0.9.46",
     "cross-env": "^7.0.0",
