--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react": "^17.0.0",
     "react-dev-inspector": "^1.1.1",
     "react-dom": "^17.0.0",
+    "react-draggable": "^4.4.3",
     "react-helmet-async": "^1.0.4",
     "umi": "^3.2.14",
     "umi-request": "^1.0.8"
