--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-dom": "^17.0.0",
     "react-draggable": "^4.4.3",
     "react-helmet-async": "^1.0.4",
+    "react-resizable": "^3.0.4",
     "umi": "^3.2.14",
     "umi-request": "^1.0.8"
   },
@@ -83,6 +84,7 @@
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@types/react-helmet": "^6.1.2",
+    "@types/react-resizable": "^1.7.3",
     "@umijs/fabric": "^2.6.2",
     "@umijs/plugin-blocks": "^2.0.5",
     "@umijs/plugin-esbuild": "^1.3.1",
