--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@umijs/max": "^4.3.24",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.1",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "express": "^4.21.1",
     "gh-pages": "^6.1.1",
     "husky": "^9.1.6",
