--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "umi-presets-pro": "^2.0.3",
-    "umi-serve": "^1.9.11"
+    "umi-serve": "^1.9.11",
+    "@iconify/react": "^5"
   },
   "engines": {
     "node": ">=12.0.0"
