--- a/package.json
+++ b/package.json
@@ -55,12 +55,14 @@
     "querystring": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-draggable": "^4.4.6"
+    "react-draggable": "^4.4.6",
+    "react-if": "^4.1.5"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^3.3.0",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
+    "@iconify/react": "^5",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
     "@types/classnames": "^2.3.1",
@@ -88,8 +90,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "umi-presets-pro": "^2.0.3",
-    "umi-serve": "^1.9.11",
-    "@iconify/react": "^5"
+    "umi-serve": "^1.9.11"
   },
   "engines": {
     "node": ">=12.0.0"
