--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/express": "^4.17.21",
     "@types/history": "^5.0.0",
     "@types/jest": "^29.5.13",
+    "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.10",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
