--- a/package.json
+++ b/package.json
@@ -39,14 +39,14 @@
     "defaults"
   ],
   "dependencies": {
-    "@ant-design/icons": "^4.8.3",
-    "@ant-design/pro-components": "^2.7.19",
+    "@ant-design/icons": "^5.5.2",
+    "@ant-design/pro-components": "^2.8.2",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
-    "ahooks": "^3.8.1",
-    "antd": "^5.21.2",
+    "ahooks": "^3.8.4",
+    "antd": "^5.22.5",
     "antd-img-crop": "^4.23.0",
-    "antd-style": "^3.7.0",
+    "antd-style": "^3.7.1",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
     "emoji-mart": "^5.6.0",
@@ -74,8 +74,8 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@types/react-helmet": "^6.1.11",
-    "@umijs/lint": "^4.3.24",
-    "@umijs/max": "^4.3.24",
+    "@umijs/lint": "^4.4.1",
+    "@umijs/max": "^4.4.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -87,6 +87,7 @@
     "lint-staged": "^15.2.10",
     "mockjs": "^1.1.0",
     "prettier": "^3.3.3",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
